--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -272,4 +272,10 @@ header nav .nav-sections ul > li > ul > li {
 /* tools */
 header nav .nav-tools {
   grid-area: tools;
+
+  header nav .nav-tools {
+  grid-area: tools;
+
+  .HatNavigation {
+    background-color: 
 }
