resolve padding issue in header

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -17,7 +17,7 @@ header nav {
   margin: auto;
   max-width: 1264px;
   height: var(--nav-height);
-  padding: 0 1rem;
+  /* padding: 0 1rem; */
   font-family: var(--body-font-family);
 }
 
@@ -32,7 +32,7 @@ header nav[aria-expanded="true"] {
 
 @media (min-width: 600px) {
   header nav {
-    padding: 0 2rem;
+    /* padding: 0 2rem; */
   }
 }
 
