--- a/styles/all.min.gz.css
+++ b/styles/all.min.gz.css
@@ -1807,6 +1807,7 @@ body[data-signin-overlay] {
     position:fixed;
     position: -webkit-sticky;
     position: sticky;
+    position: absolute;
     top: 0;
     z-index: 50;
     padding: 0 calc((100vw - 1195px)/2)
@@ -1814,7 +1815,9 @@ body[data-signin-overlay] {
 
 .Page-header,.Page-header-bar {
     display: -ms-flexbox;
-    display: flex
+    display: flex;
+    position:fixed;
+    width: 100%
 }
 
 .Page-header-bar {
