modify footer js

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,4 +1,4 @@
-footer {
+/* footer {
   padding: 2rem;
   background-color: var(--overlay-background-color);
   font-size: var(--body-font-size-s);
@@ -15,4 +15,4 @@ footer .footer p {
 .FooterNavigationItem-heading {
   display: block !important;
 }
-
+ */
